--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-apirest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "deploy": "firebase deploy --only functions:api"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^4.2.1",
     "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "16"
   }
 }
