--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node src/index.js",
     "deploy": "firebase deploy --only functions:api"
   },
   "keywords": [],
@@ -17,9 +17,6 @@
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.1",
     "mongoose": "^6.8.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   },
   "engines": {
     "node": "16"
